@@ -26,7 +26,7 @@ define( function( require ) {
   /**
    * @param {Property} equationProperty the equation that the scales are representing
    * @param {HorizontalAligner} aligner provides layout information to ensure horizontal alignment with other user-interface elements
-   * @param {*} options
+   * @param {Object} options
    * @constructor
    */
   function BarChartsNode( equationProperty, aligner, options ) {
