@@ -21,7 +21,7 @@ define( function( require ) {
   /**
    * @param {DOT.Range} coefficientRange
    * @param {EquationTerm} term
-   * @param {*} options
+   * @param {Object} options
    * @constructor
    */
   function TermNode( coefficientRange, term, options ) {
